@@ -1,3 +1,5 @@
+import org.w3c.dom.ls.LSOutput;
+
 import javax.swing.*;
 import java.awt.*;
 import java.awt.event.ActionEvent;
@@ -5,7 +7,7 @@ import java.awt.event.ActionListener;
 import java.util.*;
 import java.util.List;
 
-public class InterfazJuego extends JFrame{
+public class InterfazJuego extends JFrame implements Mensaje{
     private JPanel panelBingo;
     private JPanel tablero;
     private JPanel historial;
@@ -17,9 +19,11 @@ public class InterfazJuego extends JFrame{
     private Tombola bola;
     private List<Integer> bolasJugadas;
     private LogicaBingo logicaBingo;
+    private int tiradasRestantes;
 
+    public InterfazJuego(int tiradasVentana){
+        this.tiradasRestantes = tiradasVentana;
 
-    public InterfazJuego(){
         setTitle("Bingo");
         setSize(1300, 800);
         setDefaultCloseOperation(EXIT_ON_CLOSE);
@@ -54,49 +58,86 @@ public class InterfazJuego extends JFrame{
                 } while (usados[i].contains(num));
                 usados[i].add(num);
 
-                tableroBingo[j][i] = new JLabel(String.valueOf(num));
-                tableroBingo[j][i].setHorizontalAlignment(JLabel.CENTER);
-                tableroBingo[j][i].setFont(new Font("Arial", Font.BOLD, 25));
-                tableroBingo[j][i].setBorder(BorderFactory.createLineBorder(Color.BLACK));
-                tableroBingo[j][i].setOpaque(true); // Para asegurar que el color de fondo sea visible
-                tablero.add(tableroBingo[j][i]);
+                if(i == 2 && j == 3){
+                    tableroBingo[j][i] = new JLabel("Free");
+                    tableroBingo[j][i].setHorizontalAlignment(JLabel.CENTER);
+                    tableroBingo[j][i].setFont(new Font("Arial", Font.BOLD, 25));
+                    tableroBingo[j][i].setBorder(BorderFactory.createLineBorder(Color.BLACK));
+                    tableroBingo[j][i].setOpaque(true);
+                    tablero.add(tableroBingo[j][i]);
+                } else{
+                    tableroBingo[j][i] = new JLabel(String.valueOf(num));
+                    tableroBingo[j][i].setHorizontalAlignment(JLabel.CENTER);
+                    tableroBingo[j][i].setFont(new Font("Arial", Font.BOLD, 25));
+                    tableroBingo[j][i].setBorder(BorderFactory.createLineBorder(Color.BLACK));
+                    tableroBingo[j][i].setOpaque(true);
+                    tablero.add(tableroBingo[j][i]);
+                }
             }
         }
 
         infoGirar = new JPanel();
+        infoGirar.setBackground(new Color(245, 245, 245));
+        infoGirar.setBorder(BorderFactory.createLineBorder(new Color(100, 100, 100), 2));
         bola = new Tombola();
         logicaBingo = new LogicaBingo();
         bolasJugadas = new ArrayList<>();
         infoGirar.setLayout(new BorderLayout());
         girar = new JButton("Girar");
+        girar.setFont(new Font("Arial", Font.BOLD, 20));
+        girar.setBackground(new Color(166, 164, 164));
+        girar.setForeground(Color.WHITE);
+        girar.setFocusPainted(false);
+        girar.setPreferredSize(new Dimension(120, 40));
+
         girar.addActionListener(new ActionListener() {
             @Override
             public void actionPerformed(ActionEvent e) {
                 bolasJugadas.add(bola.getNumeroTobola());
-                System.out.println(bolasJugadas.getLast());
-                ultimoTiro.setText(String.valueOf(bolasJugadas.getLast()));
-                for(int i=0; i<5; i++){
+                System.out.println(bolasJugadas.get(bolasJugadas.size() - 1));
+                ultimoTiro.setText(String.valueOf(bolasJugadas.get(bolasJugadas.size() - 1)));
+                for(int i=1; i<6; i++){
                     for(int j=0; j<5; j++) {
-                        if(logicaBingo.compararBolaTablero(tableroBingo[i][j], bolasJugadas.getLast())) {
+                        if(logicaBingo.compararBolaTablero(tableroBingo[i][j], bolasJugadas.get(bolasJugadas.size() - 1))) {
                             tableroBingo[i][j].setBackground(Color.green);
                             tableroBingo[i][j].setOpaque(true);
-                            VentanaPatron.patronVictoria[i][j] = 0;
+                            VentanaPatron.patronVictoria[i-1][j] = 0;
 
                             for(int k = 0; k < VentanaPatron.patronVictoria.length; k++){
                                 for(int m = 0; m < VentanaPatron.patronVictoria[k].length; m++) {
-                                    System.out.print(VentanaPatron.patronVictoria[k][m] + " "); // Imprimimos cada elemento con un espacio
+                                    System.out.print(VentanaPatron.patronVictoria[k][m] + " ");
                                 }
-                                System.out.println(); // Nueva línea después de cada fila
+                                System.out.println();
                             }
 
                         }
                     }
                 }
+                tiradasRestantes--;
+                if(logicaBingo.verificarVictoria()){
+                    mensaje("GANASTE", "src/bingoIcono.png");
+                    dispose();
+                } else if(!logicaBingo.verificarVictoria() && tiradasRestantes <= 0){
+                    mensaje("PERDISTE", "src/multiplicar.png");
+                    dispose();
+                }
+                for (int i = 0; i < 5; i++) {
+                    for (int j = 0; j < 16; j++) {
+                        if (tableroHistorial[i][j].getText().equals(String.valueOf(bolasJugadas.getLast()))) {
+                            tableroHistorial[i][j].setBackground(new Color(235, 157, 148));
+                        }
+                    }
+                }
+                System.out.println("tiradas restantes: "+tiradasRestantes);
             }
         });
 
-        // los numeros de abajo del tablero no se marcan verdes
         ultimoTiro = new JLabel();
+        ultimoTiro.setFont(new Font("Arial", Font.BOLD, 18));
+        ultimoTiro.setHorizontalAlignment(JLabel.CENTER);
+        ultimoTiro.setOpaque(true);
+        ultimoTiro.setBackground(new Color(240, 240, 240));
+        ultimoTiro.setBorder(BorderFactory.createLineBorder(new Color(180, 180, 180)));
         infoGirar.add(girar, BorderLayout.SOUTH);
         infoGirar.add(ultimoTiro, BorderLayout.CENTER);
 
@@ -130,5 +171,13 @@ public class InterfazJuego extends JFrame{
 
 
         setVisible(true);
+    }
+
+    @Override
+    public void mensaje(String mensaje, String icono){
+        ImageIcon bingo = new ImageIcon(icono);
+        Image imgBingo = bingo.getImage().getScaledInstance(70, 70, Image.SCALE_SMOOTH);
+        ImageIcon bingoEscalado = new ImageIcon(imgBingo);
+        JOptionPane.showMessageDialog(null, mensaje, "Mensaje", JOptionPane.INFORMATION_MESSAGE, bingoEscalado);
     }
 }
